[package]
name = "atorrlinker"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "atorrlinker-undup"
path = "src/undup/cli.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
sha2 = "0.10.9"
thiserror = "2.0.16"

[dev-dependencies]
uuid = { version = "1.18.1", features = ["v4"] }
tempfile = "3"
